Not PDF/UA related - epic cleanup (adding types, etc).
Started off as learning more about how we paint inline boxes to solve the PDF/UA order problem, but ended up as as a cleanup. Doesn't belong in this branch but bad luck.